style: fix z-index on scrolling arrows

--- a/src/components/Picklist/styles.scss
+++ b/src/components/Picklist/styles.scss
@@ -260,6 +260,7 @@
     height: 1.125rem;
     position: fixed;
     width: 100%;
+    z-index: 10;
     background: white;
 
     &::after {
